# analysis-agent-platform

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  compose.dev.yml  compose.staging.yml  manual.md
workers/python-ai/: Dockerfile  README.md  pyproject.toml
workers/python-ai/docs/investigations/: 2026-04-27-llm-prompt-bundle-mapping.md
workers/python-ai/tests/: test_analyze_endpoint.py  test_analyze_planner_validation_graceful.py  test_anthropic_client.py  test_artifact_provenance.py  test_artifact_views.py  test_build_prompt_version.py  test_clause_artifact_shape.py  test_clause_keywords_build.py  test_clause_keywords_view.py  test_clause_label_genuineness_filter.py  test_clause_label_prompt.py  test_clause_label_verify.py  test_clean_standard_schema.py  test_clean_whitespace.py  test_composer.py  test_composition_views.py  test_contract_drift.py  test_dataset_build_cancel.py  test_dataset_build_model_selection.py  test_doc_genuineness.py  test_doc_genuineness_concurrency.py  test_doc_genuineness_concurrency_env.py  test_doc_genuineness_verify.py  test_docs_extra_columns_queryable.py  test_embedding_eval.py  test_executor_calculate.py  test_executor_clause_keywords_overlay.py  test_executor_present.py  test_executor_smoke.py  test_genuineness_view_verify_compat.py  test_keyword_extractor.py  test_llm_guards.py  test_llm_prompt_snapshot.py  test_lloa_client.py  test_main_hardening.py  test_main_http.py  test_noise_patterns.py  test_obs_decorators.py  test_obs_logger.py  test_obs_middleware.py  (+34 more)
(+927 files in other folders)
