[project]
name = "python-ai-worker"
version = "0.1.0"
description = "AI worker scaffold for planning, embeddings, semantic search, and evidence generation."
requires-python = ">=3.11"
dependencies = [
  "fastembed>=0.8,<0.9",
  "pydantic>=2.8,<3.0",
  "pyarrow>=21,<22",
  "duckdb>=1.1,<2.0",
  "psycopg[binary]>=3.2,<3.3",
  "structlog>=24,<26",
  # 한국어 명사 추출 (Kiwi, JVM 불필요). runtime.common._extract_noun_tokens 및
  # clause_keywords build가 사용. 미설치 시 regex_fallback(josa 포함 저품질)로 떨어짐.
  "kiwipiepy>=0.23,<0.24",
  # 엑셀(.xlsx/.xlsm) 업로드 파싱. runtime.common._read_excel_rows가 사용 (lazy import).
  "openpyxl>=3.1,<3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
